[project]
name = "social-surveys-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioinject>=0.37.4",
    "alembic>=1.14.0",
    "apitally[litestar]>=0.14.2",
    "asyncpg>=0.30.0",
    "greenlet>=3.1.1",
    "litestar>=2.13.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]

[tool.ruff]
exclude = ["src/ignored/*.py", "t.py"]
line-length = 79

[tool.ruff.lint]
extend-select = [
    "E501",
    "UP",
]
[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["TID251"]

[tool.uv.workspace]
members = ["venv"]

[scripts]
lint = """
ruff check .
ruff format .
"""
