[project]
name = "social-surveys-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioinject>=0.37.4",
    "alembic>=1.14.0",
    "apitally[litestar]>=0.14.2",
    "asyncpg>=0.30.0",
    "greenlet>=3.1.1",
    "jose>=1.0.0",
    "litestar>=2.13.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.0",
    "python-jose>=3.3.0",
    "result>=0.17.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
    "mypy>=1.15.0",
]

[tool.ruff]
exclude = ["src/ignored/*.py", "t.py"]
line-length = 79

[tool.ruff.lint]
fixable = [
  "UP",
]


[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["TID251"]

[tool.uv.workspace]
members = ["venv"]

[tool.mypy]
exclude = "(alembic)|(src/ignored)|t.py|(_entrypoints)"
plugins = [
  "pydantic.mypy",
]

follow_imports = "silent"
ignore_missing_imports = true

check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true

warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

strict_equality = true
strict_optional = true

no_namespace_packages = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
